# job-agent-poc

./: .gitignore  LICENSE  README.md  pyproject.toml
src/agent_test/: __init__.py  config.py  ui.py
src/agent_test/agents/: __init__.py  base.py  crewai_agent.py  pipeline.py
src/agent_test/agents/fit_analyzer/: __init__.py  agent.py  crew.py  graph.py  state.py
src/agent_test/agents/resume/: __init__.py  agent.py  crew.py  graph.py  state.py
src/agent_test/agents/resume_improve/: __init__.py  agent.py  crew.py  graph.py  state.py
src/agent_test/templates/: chat.html  pipeline.html
src/agent_test/utils/: logger.py  openrouter_client.py
tests/: conftest.py  test_agent.py  test_ui.py
tests/agents/fit_analyzer/: test_agent.py  test_crew.py  test_input_parsing.py  test_state.py
tests/agents/resume/: test_agent.py  test_crew.py  test_input_parsing.py  test_state.py
tests/agents/resume_improve/: test_agent.py  test_crew.py  test_state.py
